# ghtasks

./: .env.example  .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
docs/: CNAME  index.html  robots.txt  sitemap.xml
docs/design/: README.md  row-designs-GxF4-density.html
icon-samples/: README.md
release_notes/: v0.1.10.md  v0.1.11.md  v0.1.12.md  v0.1.13.md  v0.1.14.md  v0.1.15.md  v0.1.6.md  v0.1.7.md  v0.1.8.md  v0.1.9.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.4.1.md  v0.4.2.md  v0.4.3.md  v0.4.4.md  v0.5.0.md  v0.5.1.md  v0.5.2.md  v0.5.3-1.md  v0.5.3.md  v0.5.4.md
scripts/: make-demo-video.sh
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  commands.rs  error.rs  github.rs  http_log.rs  inbox.rs  lib.rs  main.rs  migration.rs  notify.rs  projects.rs  sources.rs  templates.rs  tray.rs
src/lib/: api.ts  issueTemplateForm.ts  markdown.ts  persistentStore.ts  statusColor.ts  stores.ts
src/lib/components/: About.svelte  FilterPicker.svelte  InboxBadge.svelte  InboxList.svelte  IssueDetail.svelte  IssueList.svelte  IssueTemplateForm.svelte  LinkedBadges.svelte  Login.svelte  NewIssue.svelte  ProjectList.svelte  Select.svelte  Settings.svelte  SourceEditor.svelte  StatusPicker.svelte  TopBar.svelte  UpdateBanner.svelte
tests/: README.md
tests/e2e/: auth-and-updates.spec.ts  capture.spec.ts  demo.spec.ts  filtering.spec.ts  frame-video.spec.ts  frame.spec.ts  inbox.spec.ts  linked-prs.spec.ts  new-issue-templates.spec.ts  new-issue.spec.ts  project-interactions.spec.ts  project-streaming.spec.ts  row-density.spec.ts  settings-and-detail.spec.ts  settings-poll-interval.spec.ts  smoke.spec.ts  tabs-and-issues.spec.ts
tests/e2e/fixtures/: app.ts  marketingData.ts  mockData.ts  tauriMock.ts
tests/unit/: issueTemplateForm.test.ts  markdown.test.ts  rowDensity.test.ts  statusColor.test.ts  visibleIssues.test.ts
