[package]
name = "ghtasks"
version = "0.1.0"
description = "GitHub Tasks — menu bar issue dashboard"
authors = ["ghtasks"]
edition = "2021"

[lib]
name = "ghtasks_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
thiserror = "2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
