[package]
name = "ghtasks"
version = "0.5.4"
description = "GitHub Tasks — menu bar issue dashboard"
authors = ["ghtasks"]
edition = "2021"

[lib]
name = "ghtasks_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
# Native macOS UserNotifications wrapper — gives us CLICKABLE desktop
# notifications (Tauri's own plugin can't react to clicks on desktop).
# Vendored fork of user-notify 0.4.2 with a `.sound()` builder added (upstream
# has no sound support); see vendor/user-notify. LGPL-3.0-or-later.
user-notify = { path = "vendor/user-notify" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
thiserror = "2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
base64 = "0.22"
tauri-plugin-updater = "2"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
